--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[tool.docformatter]
-recursive = true
-wrap-summaries = 79
-wrap-descriptions = 79
-blank = true
-
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = ["tests",]
